--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-Hello World 2
+<!doctype html>
+<html lang="en">
+<head>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <title>This is the title of the webpage!</title>
+  <link rel="stylesheet" href="index.css">
+  <script src="index.js"></script>
+</head>
+  <body>
+    <div class="main-container">
+      <main>
+        <div class="grid1">
+
+          <div class="container">
+            <section class="heading">
+              <div class="porthole-container">
+                <div class="porthole-content">
+                  <img src="./assets/300x400.svg" alt="placeholder" />
+                </div>
+              </div>
+              <div class="profile">
+                <div class="profile-content">
+                  <h2>Username</h2>
+                  <div>@Tag</div>
+                  <div>Short Description</div>
+                </div>
+              </div>
+            </section>
+            <div role="tablist">
+              <button role="tab" id="button_1" onclick="onButtonClick('button_1')">Home</button>
+              <button role="tab" id="button_2" onclick="onButtonClick('button_2')">Videos</button>
+              <button role="tab" id="button_3" onclick="onButtonClick('button_3')">Music</button>
+              <button role="tab" id="button_4" onclick="onButtonClick('button_4')">Community</button>
+              <button role="tab" id="button_5" onclick="onButtonClick('button_5')">About</button>
+            </div>
+          </div>
+        </div>
+
+        <div class="grid2">
+
+          <div class="container">
+            <section class="panel">
+  
+            </section>
+          </div>
+
+
+        </div>
+      </main>
+    </div>
+  </body>
+</html>
