added part 1 of first challenge

--- a/index.html
+++ b/index.html
@@ -38,14 +38,23 @@
         </div>
 
         <div class="grid2">
-
           <div class="container">
-            <section class="panel">
-  
+            <section class="panel" id="panel_1">
+              <iframe src="./projects/newsletter/index.html"> </iframe>
+            </section>
+            <section class="panel" id="panel_2">
+              panel_2
+            </section>
+            <section class="panel" id="panel_3">
+              panel_3
+            </section>
+            <section class="panel" id="panel_4">
+              panel_4
+            </section>
+            <section class="panel" id="panel_5">
+              panel_5
             </section>
           </div>
-
-
         </div>
       </main>
     </div>
