--- a/projects/multistep-form/index.html
+++ b/projects/multistep-form/index.html
@@ -32,7 +32,7 @@
               <div id="step-orb-4" class="step-orb"></div>
             </div>
           </div>
-          <div id="content-personal" class="content ">
+          <div id="content-personal" class="content active">
             <div class="content-wrapper">
               <h1>Personal info</h1>
               <p>Please provide your name, email address, and phone number.</p>
@@ -92,13 +92,13 @@
               </div>
             </div>
           </div>
-          <div id="content-addons" class="content active">
+          <div id="content-addons" class="content">
             <div class="content-wrapper">
               <h1>Pick add-ons</h1>
               <p>Add-ons help enhance your gaming experience.</p>
-              <button class="addon-selector">
+              <div class="addon-selector">
                 <div class="checkbox-wrapper">
-                  <input type="checkbox" autocomplete="off"/>
+                  <input type="checkbox" autocomplete="off" onclick="toggleAddon(0)"/>
                 </div>
                 <div class="explanation">
                   <div class="addon-selector-explanation-wrapper">
@@ -111,10 +111,10 @@
                     +1$ p/m
                   </div>
                 </div>
-              </button>
-              <button class="addon-selector">
+              </div>
+              <div class="addon-selector">
                 <div class="checkbox-wrapper">
-                  <input type="checkbox" autocomplete="off"/>
+                  <input type="checkbox" autocomplete="off" onclick="toggleAddon(1)"/>
                 </div>
                 <div class="explanation">
                   <div class="addon-selector-explanation-wrapper">
@@ -127,10 +127,10 @@
                     +2$ p/m
                   </div>
                 </div>
-              </button>
-              <button class="addon-selector">
+              </div>
+              <div class="addon-selector">
                 <div class="checkbox-wrapper">
-                  <input type="checkbox" autocomplete="off"/>
+                  <input type="checkbox" autocomplete="off" onclick="toggleAddon(2)"/>
                 </div>
                 <div class="explanation">
                   <div class="addon-selector-explanation-wrapper">
@@ -143,16 +143,28 @@
                     +3$ p/m
                   </div>
                 </div>
-              </button>
-              
+              </div>
             </div>
           </div>
           <div id="content-finish" class="content">
-
+            <div class="content-wrapper">
+              <h1>Finishing up</h1>
+              <p>Double-check everything looks OK before confirming.</p>
+            </div>
+          </div>
+          <div id="content-done" class="content">
+            <div class="content-wrapper">
+              <img src="./assets/images/icon-thank-you.svg" />
+              <h1>Thank you!</h1>
+              <p>Thanks for confirming your subscription! We hope you have fun 
+                using our platform. If you ever need support, please feel free 
+                to email us at support@loremgaming.com.</p>
+            </div>
           </div>
           <footer>
             <button id="previous" onclick="navigateBack()" class="primary hidden">Previous Step</button>
             <button id="next" onclick="navigateForward()" class="primary">Next Step</button>
+            <button id="confirm" onclick="navigateForward()" class="primary hidden">Confirm</button>
           </footer>
         </div>
 
@@ -160,49 +172,6 @@
     </main>
   </div>
 
-  <!-- Step 1
-  Your info
-
-  Step 2
-  Select plan
-
-  Step 3
-  Add-ons
-
-  Step 4
-  Summary -->
-
-  <!-- Sidebar end -->
-
-
-  <!-- Step 2 start -->
-<!-- 
-  Go Back
-  Next Step -->
-
-  <!-- Step 2 end -->
-
-  <!-- Step 3 start -->
-
-  <!-- Pick add-ons
-  Add-ons help enhance your gaming experience.
-
-  Online service
-  Access to multiplayer games
-  +$1/mo
-
-  Larger storage
-  Extra 1TB of cloud save
-  +$2/mo
-
-  Customizable Profile
-  Custom theme on your profile
-  +$2/mo
-
-  Go Back
-  Next Step -->
-
-  <!-- Step 3 end -->
 
   <!-- Step 4 start -->
 <!-- 
@@ -210,23 +179,6 @@
   Double-check everything looks OK before confirming. -->
 
   <!-- Dynamically add subscription and add-on selections here -->
-<!-- 
-  Total (per month/year)
-
-  Go Back
-  Confirm -->
-
-  <!-- Step 4 end -->
-
-  <!-- Step 5 start -->
-<!-- 
-  Thank you!
-
-  Thanks for confirming your subscription! We hope you have fun 
-  using our platform. If you ever need support, please feel free 
-  to email us at support@loremgaming.com. -->
-
-  <!-- Step 5 end -->
   
 </body>
 </html>
